feat: implement medical attention management system with hospitalization and medical profiles
Backend Implementation:

NEW MODELS:
- PetMedicalProfile: Master medical record for each pet
- Hospitalization: Track hospitalized patients
- HospitalizationNote: Daily notes during hospitalization
- MedicalAttachment: Store medical files and images

NEW CONTROLLERS:
- PetMedicalProfileController: Manage pet medical profiles
- HospitalizationController: Manage hospitalizations
- MedicalAttachmentController: Handle medical file uploads

NEW SERVICES:
- PetMedicalProfileService: Medical profile management
- HospitalizationService: Hospitalization workflow
- MedicalAttachmentService: File attachment handling
- CloudinaryService: Cloud storage integration
- AuditService: Track system operations

NEW DTOs:
- PetMedicalProfileDTO: Medical profile data transfer
- HospitalizationDTO: Hospitalization data transfer
- MedicalAttachmentDTO: File attachment data transfer
- CreateHospitalizationRequest: Create hospitalization
- UpdateMedicalProfileRequest: Update medical profile
- DeceasedRequest: Record patient death

NEW ENUMS:
- HospitalizationStatus: ACTIVE, DISCHARGED, DECEASED
- AttachmentFileType: IMAGE, PDF, DOCUMENT
- AttachmentReferenceType: MEDICAL_RECORD, HOSPITALIZATION

REPOSITORIES:
- PetMedicalProfileRepository: Medical profile queries
- HospitalizationRepository: Hospitalization queries
- HospitalizationNoteRepository: Note queries
- MedicalAttachmentRepository: Attachment queries

MODIFICATIONS:
- MedicalRecordService: Enhanced with new features
- AppointmentService: Added cleanup methods
- VetMedicalRecordController: New endpoints
- PetController: Enhanced pet management

DATABASE:
- V5__Create_Medical_Profile_Hospitalization_Tables.sql: New tables
- data-init.sql: Initial data

FEATURES:
✅ Pet medical profile management
✅ Hospitalization tracking
✅ Medical file attachments
✅ Cloudinary integration
✅ Audit logging
✅ Appointment cleanup
✅ Medical record enhancements